# functional-mcp

./: CLAUDE.md  IMPLEMENTATION.md  README.md  dev-notebook.ipynb  main.py  pyproject.toml
docs/: API.md  FEATURES.md  QUICKSTART.md  REFERENCE.md
docs/functional-mcp-docs/: CLAUDE.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/functional-mcp-docs/docs/: intro.mdx
docs/functional-mcp-docs/docs/core-concepts/: architecture.mdx  dynamic-generation.mdx  tool-system.mdx  transport-detection.mdx
docs/functional-mcp-docs/docs/getting-started/: first-server.mdx  installation.mdx  quickstart.mdx
docs/functional-mcp-docs/docs/guides/: loading-servers.mdx
docs/tools/: tools.md  tools.mdx
examples/: basic_usage.py  clean_tool_access.py  type_generation.py
src/functional_mcp/: __init__.py  _impl.py  auth.py  builder.py  client.py  codegen.py  config.py  elicitation.py  event_loop.py  exceptions.py  loader.py  prompts.py  registry.py  resources.py  roots.py  sampling.py  schema.py  server.py  stubs.py  tools.py  transformation.py
src/functional_mcp/transports/: __init__.py
tests/: test_argument_serialization.py  test_basic.py  test_integration.py  test_tools.py
